--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <div class="page-header__links links-buttons">
-          <a href="tel:+7(812)6221571" class="links-buttons__phone button">+7-812-622-15-71</a>
+          <a href="tel:+7(812)6221571" class="links-buttons__phone button">+7 812 622 15 71</a>
           <a href="mailto:info@travel2business.ru" class="links-buttons__email button">info@travel2business.ru</a>
         </div>
       </div>
@@ -49,7 +49,7 @@
       <ul></ul>
     </nav>
     <div id="fullpage" class="fullpage-wrapper">
-      <section id="offer" class="section offer">
+      <section id="offer" class="section offer" style="background-image: url(img/header__bg.jpg);">
         <div class="offer__wrapper">
           <h2 class="offer__title">Доверьте организацию деловых поездок профессионалам!</h2>
           <a href="#" class="offer__link button">Узнать больше</a>
@@ -70,7 +70,7 @@
               <svg width="68" height="30" class="we-can__item-icon">
                 <use xlink:href="img/svg-sprite.svg#icon-car"></use>
               <svg>
-              <p class="we-can__item-text">Транспортное обслуживание</p>
+              <p class="we-can__item-text">Транспортное<br> обслуживание</p>
             </div>
             <div class="we-can__item">
               <svg width="32" height="32" class="we-can__item-icon">
@@ -98,31 +98,30 @@
           <h2 class="about__title">О компании</h2>
           <div class="about__left-col">
             <div class="about__text">
-            <p>Сегодня деловой туризм становится все более востребованным. 
-            Командировки в филиалы, профессиональные конференции, обучение в 
-            других городах — это лишь малый перечень того, когда компании сталкиваются
-            с необходимостью организации деловых   поездок. Поэтому многие компании,
-            чтобы не обременять себя лишними задачами и тратить время на решение 
-            данных вопросов выбирают аутсорсинг.</p>
+            <p>Сегодня деловой туризм становится все более востребованным. Командировки
+             в филиалы, профессиональные конференции, обучение в других городах 
+           – это лишь малый перечень того, когда компании сталкиваются с необходимостью
+            организации деловых поездок. Поэтому многие компании, чтобы не обременять
+             себя лишними задачами и тратить время на решение данных вопросов выбирают
+              аутсорсинг. </p>
 
-            <p>Наша компания — это современное агентство делового туризма. 
-              Мы работаем с 2007 года и предоставляем туристические услуги для 
-              корпоративных клиентов. Наша команда профессионалов всегда учтет все
-              ваши интересы и индивидуальные потребности при планировании деловой
-              поездки и организации мероприятия любой сложности. Наш опыт и 
-              профессионализм подтверждены не только годами работы, но и тысячами 
-              довольных клиентов.</p>
-            <a href="#" class="about__link button">Отправить заявку</a>
+            <p>Наша компания – это современное агентство делового туризма. Мы работаем
+             с 2007 года и предоставляем туристические услуги для корпоративных клиентов.
+              Наша команда профессионалов всегда учтет все ваши интересы и индивидуальные
+               потребности при планировании деловой поездки и организации мероприятия любой
+                сложности. Наш опыт и профессионализм подтверждены не только годами работы,
+                 но и тысячами довольных клиентов.</p>
+            <a href="#" class="about__link button">Стать клиентом</a>
             </div>
           </div>
           <div class="about__right-col">
             <div class="about__img">
-              <img src="http://placehold.it/470x295">
+              <img src="img/company__img.png">
             </div>
             <div class="about__stats">
-              <p><span>12+</span>лет на рынке</p>
-              <p><span>15000+</span>клиентов</p>
-              <p><span>10+</span>бронирований в месяц</p>
+              <p><span>12+</span>лет успешной работы</p>
+              <p><span>20 000+</span>довольных клиентов</p>
+              <p><span>500+</span>бронирований ежемесячно</p>
             </div>
           </div>
         </div>
@@ -148,9 +147,9 @@
               <svg width="50" height="50" class="advantages__img">
                 <use xlink:href="img/svg-sprite.svg#icon-like"></use>
               </svg>
-              <h3 class="advantages__title">Принцип «одного окна»</h3>
+              <h3 class="advantages__title">Все услуги в «одном окне»</h3>
               <p class="advantages__text">Экономия времени за счет коммуникации 
-              с одним поставщиком услуг по всем организационным вопросам</p>
+              с одним поставщиком услуг по всем организационным вопросам.</p>
             </div>
             <div class="advantages__item">
               <svg width="50" height="50" class="advantages__img">
@@ -158,14 +157,14 @@
               </svg>
               <h3 class="advantages__title">Персональный менеджер</h3>
               <p class="advantages__text">Помощь и консультирование по вопросам 
-              выбора и бронирования услуг</p>
+              выбора и бронирования услуг.</p>
             </div>
             <div class="advantages__item">
               <svg width="50" height="50" class="advantages__img">
                 <use xlink:href="img/svg-sprite.svg#icon-list"></use>
               </svg>
               <h3 class="advantages__title">Порядок в документах</h3>
-              <p class="advantages__text">Согласовываем и предоставляемвсе 
+              <p class="advantages__text">Согласовываем и предоставляем все 
                 необходимые закрывающие документы бухгалтерии заказчика.</p>
             </div>
             <div class="advantages__item">
@@ -189,29 +188,7 @@
       </section>
       <section id="section3 reviews" class="section reviews">
         <div class="reviews__wrapper">
-<!--           <div class="reviews__clients clients">
-            <p class="clients__text">Что клиенты говорят об удобстве работы с нами</p>
-            <ul id="clientSlider" class="clients__list">
-              <li class="clients__item">
-                <img src="img/clients/12.png" alt="cpr" width="71" height="62">
-              </li>
-              <li class="clients__item">
-                <img src="img/clients/3.png" alt="gazprom" width="111" height="49">
-              </li>
-              <li class="clients__item">
-                <img src="img/clients/5.png" alt="cpr" width="118" height="63">
-              </li>
-              <li class="clients__item">
-                <img src="img/clients/4.png" alt="lukoi" width="190" height="45">
-              </li>
-              <li class="clients__item">
-                <img src="img/clients/4.png" alt="lukoi" width="190" height="45">
-              </li>
-              <li class="clients__item">
-                <img src="img/clients/4.png" alt="lukoi" width="190" height="45">
-              </li>
-            </ul>
-          </div> -->
+          <h2 class="reviews__title">Клиенты об успешном опыте работы с нами</h2>
           <div id="reviewSlider" class="reviews__slider review">
             <div class="review__slide">
               <div class="review__author">
@@ -219,7 +196,7 @@
                   <img src="img/2.jpg" alt="#" width="70" height="70">
                 </div>
                 <div class="review__name name">
-                  <span class="name__item">Иван Иванович</span>
+                  <span class="name__item">Иван Cергеевич</span>
                   <span class="name__text">Генеральный директо</span>
                 </div>
               </div>
@@ -237,7 +214,7 @@
                   <img src="img/2.jpg" alt="#" width="70" height="70">
                 </div>
                 <div class="review__name name">
-                  <span class="name__item">Иван Иванович2</span>
+                  <span class="name__item">Иван Сергеевич2</span>
                   <span class="name__text">Генеральный директо</span>
                 </div>
               </div>
@@ -249,22 +226,43 @@
                вариант, подходящий под мои требования. А по итогу я еще получу
                сводную отчетность по всем предоставленным услугам»</p>
             </div>
-            <div class="review__toggle">
-              <button type="button" class="review__toggle-btn review__toggle-btn--prev">
+          </div>
+          <div class="review__toggle">
+              <button id="jsSliderNext" type="button" class="review__toggle-btn review__toggle-btn--prev">
                 <svg width="14" height="30">
                   <use xlink:href="img/svg-sprite.svg#icon-left-arrow"></use>
                 </svg>
               </button>
               <div class="review__toggle-numbers">
-                <span class="current">1</span>/
-                <span class="all">7</span>
+                <div id="result"></div>
               </div>
-              <button type="button" class="review__toggle-btn review__toggle-btn--next">
+              <button id="jsSliderPrev" type="button" class="review__toggle-btn review__toggle-btn--next">
                 <svg width="14" height="30">
                   <use xlink:href="img/svg-sprite.svg#icon-right-arrow"></use>
                 </svg>
               </button>
             </div>
+          <div class="reviews__clients clients">
+            <ul id="clientSlider" class="clients__list">
+              <li class="clients__item">
+                <img src="img/clients/gazprom.jpg" alt="gazprom" width="120" height="60">
+              </li>
+              <li class="clients__item">
+                <img src="img/clients/lukoil.jpg" alt="lukoil" width="238" height="74">
+              </li>
+              <li class="clients__item">
+                <img src="img/clients/gis.jpg" alt="gis" width="126" height="60">
+              </li>
+              <li class="clients__item">
+                <img src="img/clients/nmlk.jpg" alt="nmlk" width="105" height="64">
+              </li>
+              <li class="clients__item">
+                <img src="img/clients/purneftegaz.jpg" alt="purneftegaz" width="131" height="70">
+              </li>
+              <li class="clients__item">
+                <img src="img/clients/cpr.jpg" alt="cpr" width="92" height="79">
+              </li>
+            </ul>
           </div>
         </div>
       </section>
@@ -272,19 +270,31 @@
         <div class="contacts__wrapper">
           <div class="contacts__item">
             <h2 class="contacts__title">Контакты</h2>
-            <p class="contacts__text"><span>Адрес:</span>Санкт-Петербург, ул.Профессора Попова д.23</p>
+            <p class="contacts__text"><span>Адрес:</span>Санкт-Петербург,<br> ул.Профессора Попова д.23</p>
             <a class="contacts__phone" href="tel:+78126221571">
-              <span>Телефон</span>+7(812)-622-15-71</a>
+              <span>Телефон</span>+7 (812) 622 15 71</a>
             <a class="contacts__email" href="mailto:info@travel2business.ru">
               <span>email</span>info@travel2business.ru</a>
             <div class="contacts__social social">
               <ul class="social__list">
-                <li class="social__item"><a href="#" class="social__link social__link--vk"></a></li>
-                <li class="social__item"><a href="#" class="social__link social__link--instagram"></a></li>
-                <li class="social__item"><a href="#" class="social__link social__link--facebook"></a></li>
+                <li class="social__item"><a href="#" class="social__link social__link--vk">
+                  <svg width="35" height="20">
+                    <use xlink:href="img/svg-sprite.svg#icon-vk"></use>
+                  </svg>
+                </a></li>
+                <li class="social__item"><a href="#" class="social__link social__link--instagram">
+                  <svg width="22" height="22">
+                    <use xlink:href="img/svg-sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="social__item"><a href="#" class="social__link social__link--facebook">
+                  <svg width="13" height="25">
+                    <use xlink:href="img/svg-sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a></li>
               </ul>
               <div class="social__private">
-                <a href="#">Политика конфеденциальности</a>
+                <a href="#">Юридическая информация</a>
               </div>
             </div>
           </div>
@@ -301,7 +311,7 @@
                 <input class="form__input" type="tel" id="email" placeholder="Ваша почта">
               </label>
               <label class="form__lable" for="comment">Сообщение
-                <textarea class="form__textarea" name="call-back" id="comment" rows="3"></textarea>
+                <textarea class="form__textarea" name="call-back" id="comment" rows="2"></textarea>
               </label>
               <input class="form__checkbox" id="agreement" type="checkbox">
               <label class="form__check-lable" for="agreement">Принимаю политику конфиденциальности</label>
