--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#000">
   <title>Travel2Buissnes - Регион сервиc</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.css">
 <!--   <link rel="stylesheet" href="css/libs.min.css"> -->
   <link rel="stylesheet" href="css/style.css">
@@ -106,7 +107,7 @@
           </div>
         </div>
       </section>
-      <secton class="offer-mobile">
+<!--       <secton class="offer-mobile">
         <div class="offer-mobile__wrapper">
           <h2 class="offer-mobile__title">Наши услуги</h2>
           <div class="offer-mobile__list">
@@ -148,7 +149,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section id="section1 about" class="section about">
         <div class="about__wrapper">
           <h2 class="about__title">О компании</h2>
