--- a/app/index.html
+++ b/app/index.html
@@ -25,11 +25,11 @@
 </head>
 <body>
   <header id="header" class="page-header">
-      <div class="page-header__wrapper">
+      <div class="page-header__wrapper active">
         <h1 class="visually-hidden">Travel2Buissnes - Регион сервиc</h1>
         <a href="#offer" class="page-header__logo logo">
           <img class="logo__img" src="img/logo.svg" alt="Логотип компании - Travel2Buissnes">
-          <img class="logo__img--dark" src="img/logo-dark.svg" alt="Темный логотип компании - Travel2Buissnes">
+          <img class="logo__img--dark active" src="img/logo-dark.svg" alt="Темный логотип компании - Travel2Buissnes">
         </a>
         <nav class="page-header__navigation nav">
           <ul class="nav__list" id="menu">
@@ -46,14 +46,17 @@
           <div class="m-menu">
             <ul class="m-menu__list">
               <li data-menuanchor="about" class="m-menu__item"><a href="#about" class="m-menu__link">О компании</a></li>
+              <li data-menuanchor="about" class="m-menu__item"><a href="#about" class="m-menu__link">Услуги</a></li>
               <li data-menuanchor="advantages" class="m-menu__item"><a href="#advantages" class="m-menu__link">Почему мы</a></li>
               <li data-menuanchor="reviews" class="m-menu__item"><a href="#reviews" class="m-menu__link">Отзывы</a></li>
               <li data-menuanchor="contacts" class="m-menu__item"><a href="#contacts" class="m-menu__link">Контакты</a></li>
             </ul>
+            <a href="tel:+7(812)6221571" class="m-menu__phone">+7 812 622 15 71</a>
+            <a href="mailto:info@travel2business.ru" class="m-menu__email">info@travel2business.ru</a>
           </div>
         </div>
         <div class="page-header__links links-buttons">
-          <a href="tel:+7(812)6221571" class="links-buttons__phone button">+7 812 622 15 71</a>
+          <a href="#form" class="links-buttons__phone button">+7 812 622 15 71</a>
           <a href="mailto:info@travel2business.ru" class="links-buttons__email button">info@travel2business.ru</a>
         </div>
       </div>
@@ -63,93 +66,55 @@
       <ul></ul>
     </nav>
     <div id="fullpage" class="fullpage-wrapper">
-      <section id="offer" class="section offer" style="background-image: url(img/header__bg.jpg);">
+      <section id="offer" class="section offer">
         <div class="offer__wrapper">
-          <h2 class="offer__title">Доверьте организацию деловых поездок профессионалам!</h2>
-          <a href="#" class="offer__link button">Узнать больше</a>
-          <div class="offer__icons we-can">
-            <div class="we-can__item">
-              <svg width="32" height="32" class="we-can__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-hotel"></use>
-              <svg>
-              <p class="we-can__item-text">Размещение в гостиницах по России и за рубежом</p>
-            </div>
-            <div class="we-can__item">
-              <svg width="32" height="32" class="we-can__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-plane"></use>
-              <svg>
-              <p class="we-can__item-text">Авиабилеты и железнодорожные билеты</p>
-            </div>
-            <div class="we-can__item">
-              <svg width="68" height="30" class="we-can__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-car"></use>
-              <svg>
-              <p class="we-can__item-text">Транспортное<br> обслуживание</p>
-            </div>
-            <div class="we-can__item">
-              <svg width="32" height="32" class="we-can__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-case"></use>
-              <svg>
-              <p class="we-can__item-text">Организация деловых мероприятий (MICE)</p>
-            </div>
-            <div class="we-can__item">
-              <svg width="32" height="32" class="we-can__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-museum"></use>
-              <svg>
-              <p class="we-can__item-text">Культурно-развлекательные программы</p>
-            </div>
-            <div class="we-can__item">
-              <svg width="32" height="32" class="we-can__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-corp"></use>
-              <svg>
-              <p class="we-can__item-text">Корпоративные обучающие программы </p>
+          <div class="offer__top">
+            <h2 class="offer__title">Доверьте организацию деловых поездок профессионалам!</h2>
+            <a href="#" class="offer__link button">Узнать больше</a>
+          </div>
+          <div class="offer__bottom">
+            <h2 class="offer-mobile__title">Наши услуги</h2>
+            <div class="offer__icons we-can">
+              <div class="we-can__item">
+                <svg width="32" height="32" class="we-can__item-icon">
+                  <use xlink:href="img/svg-sprite.svg#icon-hotel"></use>
+                <svg>
+                <p class="we-can__item-text">Размещение в гостиницах по России и за рубежом</p>
+              </div>
+              <div class="we-can__item">
+                <svg width="32" height="32" class="we-can__item-icon">
+                  <use xlink:href="img/svg-sprite.svg#icon-plane"></use>
+                <svg>
+                <p class="we-can__item-text">Авиабилеты и железнодорожные билеты</p>
+              </div>
+              <div class="we-can__item">
+                <svg width="68" height="30" class="we-can__item-icon">
+                  <use xlink:href="img/svg-sprite.svg#icon-car"></use>
+                <svg>
+                <p class="we-can__item-text">Транспортное<br> обслуживание</p>
+              </div>
+              <div class="we-can__item">
+                <svg width="32" height="32" class="we-can__item-icon">
+                  <use xlink:href="img/svg-sprite.svg#icon-case"></use>
+                <svg>
+                <p class="we-can__item-text">Организация деловых мероприятий (MICE)</p>
+              </div>
+              <div class="we-can__item">
+                <svg width="32" height="32" class="we-can__item-icon">
+                  <use xlink:href="img/svg-sprite.svg#icon-museum"></use>
+                <svg>
+                <p class="we-can__item-text">Культурно-развлекательные программы</p>
+              </div>
+              <div class="we-can__item">
+                <svg width="32" height="32" class="we-can__item-icon">
+                  <use xlink:href="img/svg-sprite.svg#icon-corp"></use>
+                <svg>
+                <p class="we-can__item-text">Корпоративные обучающие программы </p>
+              </div>
             </div>
           </div>
         </div>
       </section>
-<!--       <secton class="offer-mobile">
-        <div class="offer-mobile__wrapper">
-          <h2 class="offer-mobile__title">Наши услуги</h2>
-          <div class="offer-mobile__list">
-            <div class="offer-mobile__item">
-              <svg width="32" height="32" class="offer-mobile__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-hotel"></use>
-              <svg>
-              <p class="offer-mobile__item-text">Размещение в гостиницах по России и за рубежом</p>
-            </div>
-            <div class="offer-mobile__item">
-              <svg width="68" height="30" class="offer-mobile__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-car"></use>
-              <svg>
-              <p class="offer-mobile__item-text">Транспортное<br> обслуживание</p>
-            </div>
-            <div class="offer-mobile__item">
-              <svg width="32" height="32" class="offer-mobile__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-plane"></use>
-              <svg>
-              <p class="offer-mobile__item-text">Авиабилеты и железнодорожные билеты</p>
-            </div>
-            <div class="offer-mobile__item">
-              <svg width="32" height="32" class="offer-mobile__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-case"></use>
-              <svg>
-              <p class="offer-mobile__item-text">Организация деловых мероприятий (MICE)</p>
-            </div>
-            <div class="offer-mobile__item">
-              <svg width="32" height="32" class="offer-mobile__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-museum"></use>
-              <svg>
-              <p class="offer-mobile__item-text">Культурно-развлекательные программы</p>
-            </div>
-            <div class="offer-mobile__item">
-              <svg width="32" height="32" class="offer-mobile__item-icon">
-                <use xlink:href="img/svg-sprite.svg#icon-corp"></use>
-              <svg>
-              <p class="offer-mobile__item-text">Корпоративные обучающие программы </p>
-            </div>
-          </div>
-        </div>
-      </section> -->
       <section id="section1 about" class="section about">
         <div class="about__wrapper">
           <h2 class="about__title">О компании</h2>
@@ -191,8 +156,8 @@
              <p class="advantages__teaser-mobile">Наши преимущества</p>
               <a href="#" class="advantages__button button">Отправить заявку</a>
           </div>
-          <div class="advantages__list mobile-slider">
-            <div id="advantageSlider" class="mobile-slider__wrap">
+          <div id="advantageSlider" class="advantages__list mobile-slider">
+            <div class="mobile-slider__wrap">
               <div class="advantages__item">
                 <svg width="50" height="50" class="advantages__img">
                   <use xlink:href="img/svg-sprite.svg#icon-prof"></use>
@@ -293,6 +258,10 @@
                политику и уверенность в том, что мне предложат оптимальный 
                вариант, подходящий под мои требования. А по итогу я еще получу
                сводную отчетность по всем предоставленным услугам»</p>
+               <div class="review__name-mobile name">
+                <span class="name__item">Халк Несокрушимый</span>
+                <span class="name__text">Неуловимый мститель</span>
+              </div>
             </div>
           </div>
           <div class="review__toggle">
@@ -313,22 +282,22 @@
           <div class="reviews__clients clients">
             <ul id="clientSlider" class="clients__list">
               <li class="clients__item">
-                <img src="img/clients/gazprom.jpg" alt="gazprom" width="120" height="60">
+                <img src="img/clients/gis.png" alt="gazprom" width="126" height="60">
               </li>
               <li class="clients__item">
-                <img src="img/clients/lukoil.jpg" alt="lukoil" width="238" height="74">
+                <img src="img/clients/gis.png" alt="lukoil" width="126" height="60">
               </li>
               <li class="clients__item">
-                <img src="img/clients/gis.jpg" alt="gis" width="126" height="60">
+                <img src="img/clients/gis.png" alt="gis" width="126" height="60">
               </li>
               <li class="clients__item">
-                <img src="img/clients/nmlk.jpg" alt="nmlk" width="105" height="64">
+                <img src="img/clients/gis.png" alt="nmlk" width="126" height="60">
               </li>
               <li class="clients__item">
-                <img src="img/clients/purneftegaz.jpg" alt="purneftegaz" width="131" height="70">
+                <img src="img/clients/gis.png" alt="purneftegaz" width="126" height="60">
               </li>
               <li class="clients__item">
-                <img src="img/clients/cpr.jpg" alt="cpr" width="92" height="79">
+                <img src="img/clients/gis.png" alt="cpr" width="126" height="60">
               </li>
             </ul>
           </div>
